# selenium

./: .bazelrc  .gitignore  WORKSPACE
.github/workflows/: bazel.yml  build-selenium-manager.yml  ci-ruby.yml  ci-rust.yml
dotnet/: defs.bzl  dotnet_deps.bzl  main.bzl  paket.bzl  paket.dependencies  update-deps.sh
dotnet/private/: dotnet_nunit_test_suite.bzl  dotnet_tool.bzl  nuget_export.bzl
dotnet/src/support/: BUILD.bazel
dotnet/src/webdriver/: BUILD.bazel  WebDriver.nuspec
dotnet/src/webdriverbackedselenium/: BUILD.bazel
dotnet/test/common/: BUILD.bazel
dotnet/test/common/Environment/: DriverFactory.cs  EnvironmentManager.cs  TestWebServer.cs
dotnet/test/firefox/: WebDriver.Firefox.Tests.csproj
java/src/com/thoughtworks/selenium/webdriven/commands/: WaitForPageToLoad.java
java/src/org/openqa/selenium/remote/service/: DriverService.java
java/test/org/openqa/selenium/environment/webserver/: NettyAppServer.java
py/: mkdocs.yml  tox.ini
py/newdocs/: auto_generate.py  index.md
py/selenium/webdriver/firefox/: firefox_profile.py
py/selenium/webdriver/support/: wait.py
rb/: ruby_version.bzl
rb/spec/unit/selenium/webdriver/common/interactions/: pointer_event_prop_spec.rb
rust/: BUILD.bazel
rust/src/: chrome.rs  edge.rs  firefox.rs  lib.rs
