load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//dotnet:defs.bzl", "DEFAULT_FRAMEWORKS", "devtools_version_targets", "framework")

csharp_library(
    name = "webdriver",
    srcs = glob([
        "**/*.cs",
    ]) + devtools_version_targets(),
    target_frameworks = DEFAULT_FRAMEWORKS,
    visibility = [
        "//dotnet:__subpackages__",
    ],
    deps = [
        framework("Microsoft.IdentityModel.Abstractions"),
        framework("Microsoft.IdentityModel.Tokens"),
        framework("Microsoft.NETCore.App.Ref"),
        framework("Newtonsoft.Json"),
        framework("System.Runtime"),
    ],
)
