load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//dotnet:defs.bzl", "DEFAULT_FRAMEWORKS", "devtools_version_targets", "framework", "nuget_library_export")

csharp_library(
    name = "webdriver",
    srcs = glob([
        "**/*.cs",
    ]) + devtools_version_targets(),
    resources = [
        "//javascript/atoms/fragments:find-elements.js",
        "//javascript/atoms/fragments:is-displayed.js",
        "//javascript/cdp-support:mutation-listener.js",
        "//javascript/webdriver/atoms:get-attribute.js",
        "//third_party/js/selenium:webdriver_json",
    ],
    target_frameworks = DEFAULT_FRAMEWORKS,
    visibility = [
        "//dotnet:__subpackages__",
    ],
    deps = [
        framework("Microsoft.IdentityModel.Abstractions"),
        framework("Microsoft.IdentityModel.Tokens"),
        framework("Microsoft.NETCore.App.Ref"),
        framework("Newtonsoft.Json"),
        framework("System.Runtime"),
    ],
)

nuget_library_export(
    name = "publish-webdriver",
    library = ":webdriver",
    target_frameworks = DEFAULT_FRAMEWORKS,
)
