load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//dotnet:defs.bzl", "DEFAULT_FRAMEWORKS", "devtools_version_targets", "framework", "nuget_library_export")

[csharp_library(
    name = "%s" % framework_moniker,
    srcs = glob([
        "**/*.cs",
    ]) + devtools_version_targets(),
    resources = [
        "//javascript/atoms/fragments:find-elements.js",
        "//javascript/atoms/fragments:is-displayed.js",
        "//javascript/cdp-support:mutation-listener.js",
        "//javascript/webdriver/atoms:get-attribute.js",
        "//third_party/js/selenium:webdriver_json",
    ],
    target_frameworks = [ framework_moniker ],
    visibility = [
        "//dotnet:__subpackages__",
    ],
    deps = [
        framework(framework_moniker, "Microsoft.IdentityModel.Abstractions"),
        framework(framework_moniker, "Microsoft.IdentityModel.Tokens"),
        framework(framework_moniker, "Microsoft.NETCore.App.Ref"),
        framework(framework_moniker, "Newtonsoft.Json"),
        framework(framework_moniker, "System.Runtime"),
    ],
) for framework_moniker in DEFAULT_FRAMEWORKS]

nuget_library_export(
    name = "publish-webdriver",
    library = ":webdriver",
    target_frameworks = DEFAULT_FRAMEWORKS,
)
