load("//dotnet:defs.bzl", "dotnet_nunit_test_suite", "framework")

dotnet_nunit_test_suite(
    name = "AllTests",
    size = "large",
    srcs = glob(["**/*.cs"]),
    browsers = [
        "firefox",
        "edge",
        "chrome",
    ],
    data = [
        "appconfig.json",
        "//common/src/web",
        "//java/test/org/openqa/selenium/environment:appserver_deploy.jar",
        "//java/test/org/openqa/selenium/environment:keystore",
        "//javascript/atoms",
        "//third_party/closure/goog",
        "//third_party/js/selenium:webdriver_json",
    ],
    target_frameworks = ["net6.0"],
    deps = [
        "//dotnet/src/webdriver",
        "@rules_dotnet//tools/runfiles",
        framework("Microsoft.NETCore.App.Ref"),
        framework("Newtonsoft.Json"),
        framework("NUnit"),
        framework("System.Runtime"),
    ],
)
