load("//dotnet:defs.bzl", "dotnet_nunit_test_suite", "framework")

dotnet_nunit_test_suite(
    name = "AllTests",
    size = "large",
    srcs = glob(["**/*.cs"]),
    browsers = [
        # The first browser in this list is assumed to be the one that should
        # be used by default.
        "firefox",
        # "safari",  # Skipping safari for now
        "ie",
        "edge",
        "chrome",
    ],
    data = [
        "appconfig.json",
        "//common/src/web",
        "//java/test/org/openqa/selenium/environment:appserver_deploy.jar",
        "//java/test/org/openqa/selenium/environment:keystore",
        "//javascript/atoms",
        "//third_party/closure/goog",
        "//third_party/js/selenium:webdriver_json",
    ],
    target_frameworks = ["net6.0"],
    deps = [
        "//dotnet/src/webdriver",
        "@rules_dotnet//tools/runfiles",
        framework("BenderProxy"),
        framework("Microsoft.IdentityModel.Abstractions"),
        framework("Microsoft.IdentityModel.Tokens"),
        framework("Microsoft.NETCore.App.Ref"),
        framework("Newtonsoft.Json"),
        framework("NUnit"),
        framework("System.Runtime"),
        framework("System.Runtime.InteropServices"),
    ],
)
